[package]
name = "${packageName}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "s"               # 使用最高级别的优化
lto = true                    # 启用链接时优化
codegen-units = 1             # 设置为1以降低编译时间
panic = 'abort'               # 使用 "abort" 模式来处理 panic
overflow-checks = false       # 禁用溢出检查

[dependencies]
obfstr="0.4.3"
aes = "0.8.1"
hex = "0.4.2"
libaes = "*"
rand = "*"
base64 = "0.21.2"
winapi = { version = "0.3.9",features = ["fibersapi","processthreadsapi","libloaderapi","minwinbase","rpc","winnls","heapapi","winuser", "winnt", "memoryapi","winbase","sysinfoapi"]}

